<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">优米</string>
    <string name="action_settings">设置</string>
    <string name="hello_world">Hello world!</string>
    <!-- 测试字体 -->
    <string name="delete">删除</string>
    <string name="cancel">取消</string>
    <string name="ok">确定</string>
    <string name="save">保存</string>
    <string name="a_umiwi_login">登录</string>
    <string name="jump_go_home"><u>跳过</u></string>
    <string name="a_umiwi_forget_password">忘记密码？</string>
    <string name="right_version">版权信息</string>
    <string name="right_share">邀请小伙伴</string>
    <string name="right_downpath">下载路径</string>
    <string name="right_update">检查更新</string>
    <string name="right_push">勿扰模式</string>
    <string name="right_feedback">意见反馈</string>
    <string name="ask_question">提问的问题每被偷听一次，你分成￥0.5。</string>

    <string name="content">后来我终于知道，它并不是我的花，我只是恰好途径了它的盛放。最好的爱情，是他，淡泊明志地坚守，而她，宁静致远地守候；最好的爱情，是她，明心见性的凝眸，而他，千山万水的停留。多希望有一天，我可以抛下负担，不染繁杂，抬脚便上路，随心所欲就是方向，那时的我，不再接受任何束缚，那时的我，是一朵无人可以牵系的流云。那些光阴，越来越久远；可那些情怀，越来越斑斓… …那些故事，越来越平淡；可那些伤感，越来越缱绻… …那些灯火，越来越阑珊；可那些你我，终于，看不见… …喜欢你，是我最美好的时光。想念你，是青春留下的创伤。有过为一个人不顾一切的付出，才会有现在更坚定去爱的自己。站在青春的尾巴上，感谢你，也感谢当年喜欢你的我。</string>

    <!-- 对话框 -->
    <string name="new_version_detected">检测到新版本</string>
    <string name="net_address">网址</string>
    <string name="update">升级</string>
    <string name="visit">访问</string>
    <string name="set_network">设置网络</string>
    <string name="network_error">网络错误,请检查网络的设置</string>
    <string name="quit_confirm">退出确认</string>
    <string name="logiin">登录</string>
    <string name="logout">退出</string>
    <string name="are_yout_sure_your_wanna_loggout">您确定要退出登录?</string>
    <string name="stop_audio_live">结束本次直播?</string>
    <string name="logging_out">正在退出登录</string>
    <string name="about_umiwi">关于优米</string>


    <string name="comment">写评论</string>

    <string name="title_changelog">更新日志</string>

    <string name="pay_result_callback_msg" formatted="false">微信支付结果：%s</string>
    <string name="getting_prepayid">正在获取预支付订单...</string>
    <string name="getting_access_token">正在获取access token...</string>
    <string name="get_access_token_succ">获取access token成功</string>
    <string name="get_access_token_fail" formatted="false">获取access token失败，原因%s</string>
    <string name="home_mine_user_name">立即登录</string>
    <string name="home_mine_user_time">登录后免费看、云同步</string>

    <string name="login_camera_">用电脑打开p.youmi.cn \n扫描二维码登录优米网页版</string>


    <string name="share_app_title">我发现一款很酷的学习应用</string>

    <string name="share_app_content">你恐惧变化，我在变化中寻找机遇；你抱怨现状，我在困境中突破自己；你迷茫，我从改变中获得自信；@优米创业 ，改变的人都这里。我在这里，你还不来？立即下载 http://m.youmi.cn/m.shtml </string>

    <string name="share_app_weburl">http://m.youmi.cn/m.shtml</string>
    <string name="share_app_image">http://i1.umivi.net/v/static/images/clientshare.png</string>


    <string name="action_share">分享</string>
    <string name="action_search">搜索</string>
    <string name="action_delete">删除</string>
    <string name="course_buy_str"><u>购买单课</u></string>

    <string name="show_3g_toast">您正使用2G/3G/4G网络下观看视频 ,可以在设置中关闭</string>

    <string name="competence_vip_button">开通钻石会员</string>
    <string name="competence_login_button">立即登录</string>

    <string name="competence_vip_show_content">钻石会员专享课程</string>
    <string name="competence_login_show_content">登录免费看课程</string>

    <string name="competence_vip_subtitle">此课程是钻石会员专享课程 ,支付后可继续观看 !</string>
    <string name="competence_course_subtitle">此课程是付费课程 ,支付后可继续观看!</string>
    <string name="competence_login_subtitle">此课程登录后可免费观看 !</string>


    <string name="competence_play_content">重新播放此课程</string>

    <string name="version_umiwi_introduce">关于优米：\n \t\t\t\t优米致力做“精品知识服务平台”，提供创业、职场、新趋势等多个领域的系统知识，以音频、视频、专题、直播等方式传递给用户，为用户打磨有用、实用、好用的干货。
</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="live_recommend">直播介绍</string>
    <string name="join">参与</string>
    <string name="immediately_join">立即参与</string>
    <string name="send">发送</string>
    <string name="send_your_message">\t提问或发表你的看法</string>
    <string name="visitor">游客</string>
    <string name="my_live">我的直播</string>
    <string name="living">直播中</string>
    <string name="immediately_start">即将开始</string>
    <string name="already_end">已结束</string>
    <string name="click_start_record">点击开始录音</string>
    <string name="click_stop_record">点击停止录音</string>
    <string name="click_send_record">点击发送录音</string>
    <string name="pack_up">收起</string>
    <string name="audio">语音</string>
    <string name="text">文字</string>
    <string name="picture">图片</string>
    <string name="record_60_hint">录满60秒将自动发送，并启动下一条录音</string>
    <string name="send_hint">发送和即可录制下一条</string>
</resources>
