<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/white">
        <ImageView
            android:id="@+id/iv_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="10dp"
            android:src="@drawable/back_black"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/my_live"
            android:textColor="@color/black"
            android:textSize="20sp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:layout_alignParentBottom="true"
            android:background="#adadad" />
    </RelativeLayout>
    <RelativeLayout
        android:background="@color/white"
        android:layout_width="match_parent"
        android:layout_height="50dp">

        <LinearLayout

            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tab_living"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/living"
                android:textColor="@color/main_color"
                android:textSize="13sp" />

            <TextView
                android:id="@+id/tab_immediately_start"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/immediately_start"
                android:textColor="@color/black"
                android:textSize="13sp" />
            <TextView
                android:id="@+id/tab_already_end"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/already_end"
                android:textColor="@color/black"
                android:textSize="13sp" />
        </LinearLayout>

        <View
            android:id="@+id/ab_line"
            android:layout_width="0dp"
            android:layout_height="2dp"
            android:layout_alignParentBottom="true"
            android:background="@color/main_color" />
    </RelativeLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="10dp"
        android:background="@color/color_divider_two">

    </View>
    <android.support.v4.view.ViewPager
        android:id="@+id/vp_viewPager"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    </android.support.v4.view.ViewPager>

</LinearLayout>