<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <RelativeLayout
        android:id="@+id/rl_head"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="5dp">

        <ImageView
            android:id="@+id/iv_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:padding="5dp"
            android:src="@drawable/back_audio_special" />

        <LinearLayout
            android:id="@+id/ll_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/black_a8"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/tv_status"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/black_66"
                android:textSize="14sp" />
        </LinearLayout>

        <ImageView
            android:id="@+id/iv_more"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="5dp"
            android:src="@drawable/more_3point" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_below="@+id/ll_tv"
            android:layout_marginTop="4dp"
            android:background="@color/black_33" />
    </RelativeLayout>
    <com.umiwi.ui.view.RefreshLayout
        android:id="@+id/refreshLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/rl_head"
        android:layout_above="@+id/fl_bottom">
        <android.support.v7.widget.RecyclerView
            android:id="@+id/rcy_mesagelist"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >
        </android.support.v7.widget.RecyclerView>
    </com.umiwi.ui.view.RefreshLayout>
    <RelativeLayout
        android:id="@+id/fl_bottom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        >
        <RelativeLayout
            android:id="@+id/rl_input_hint"
            android:layout_width="match_parent"
            android:layout_height="43dp"
            >
            <TextView
                android:id="@+id/tv_record_hint_top"
                android:visibility="gone"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textColor="@color/white"
                android:background="@color/record_hint"
                android:textSize="14sp"
                android:gravity="center"
                android:text="@string/record_60_hint"/>
            <RelativeLayout
                android:id="@+id/rl_input_options"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1px"
                    android:layout_above="@+id/ll_input_hint"
                    android:background="@color/black_33" />

                <LinearLayout
                    android:id="@+id/ll_input_hint"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_above="@+id/line1"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/tv_audio"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="15dp"
                        android:layout_weight="1"
                        android:drawableLeft="@drawable/icon_audio_normal"
                        android:drawablePadding="15dp"
                        android:padding="10dp"
                        android:text="@string/audio"
                        android:textColor="@color/black_a8"
                        android:textSize="16sp" />

                    <View
                        android:layout_width="1px"
                        android:layout_height="40dp"
                        android:background="@color/black_33" />

                    <TextView
                        android:id="@+id/tv_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="15dp"
                        android:layout_weight="1"
                        android:drawableLeft="@drawable/icon_text_normal"
                        android:drawablePadding="15dp"
                        android:padding="10dp"
                        android:text="@string/text"
                        android:textColor="@color/black_a8"
                        android:textSize="16sp" />

                    <View
                        android:layout_width="1px"
                        android:layout_height="40dp"
                        android:background="@color/black_33" />

                    <TextView
                        android:id="@+id/tv_picture"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="15dp"
                        android:layout_weight="1"
                        android:drawableLeft="@drawable/icon_picture_normal"
                        android:drawablePadding="15dp"
                        android:padding="10dp"
                        android:text="@string/picture"
                        android:textColor="@color/black_a8"
                        android:textSize="16sp" />
                </LinearLayout>

                <View
                    android:id="@+id/line1"
                    android:layout_width="match_parent"
                    android:layout_height="1px"
                    android:layout_alignParentBottom="true"
                    android:background="@color/black_33" />
            </RelativeLayout>
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/rl_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/rl_input_hint">

            <RelativeLayout
                android:id="@+id/rl_input_audio"
                android:visibility="gone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/tv_record_time"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_marginBottom="20dp"
                    android:layout_marginTop="20dp"
                    android:text="00:00"
                    android:textColor="@color/black_a8"
                    android:textSize="20sp" />

                <Button
                    android:id="@+id/btn_cancle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:visibility="gone"
                    android:layout_marginRight="5dp"
                    android:layout_marginTop="8dp"
                    android:background="@drawable/gray_rectangle_ring"
                    android:text="@string/cancel"
                    android:textColor="@color/black_a8"
                    android:textSize="14sp" />

                <ImageView
                    android:id="@+id/iv_record"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/tv_record_time"
                    android:layout_centerHorizontal="true"
                    android:src="@drawable/record" />

                <TextView
                    android:id="@+id/tv_record_hint"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/iv_record"
                    android:layout_centerHorizontal="true"
                    android:layout_marginBottom="30dp"
                    android:layout_marginTop="10dp"
                    android:text="@string/click_start_record"
                    android:textColor="@color/record_hint"
                    android:textSize="12sp" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/rl_input_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="gone"
                android:paddingBottom="5dp"
                android:paddingLeft="5dp"
                android:paddingRight="5dp">

                <EditText
                    android:id="@+id/et_input"
                    android:layout_width="250dp"
                    android:layout_height="50dp"
                    android:layout_marginTop="5dp"
                    android:background="@color/bg_gray"
                    android:paddingLeft="25dp"
                    android:textColor="@color/black_a8"
                    android:textSize="14sp" />

                <Button
                    android:id="@+id/btn_comfirm"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_marginRight="10dp"
                    android:layout_marginTop="5dp"
                    android:background="@drawable/button_send_gray"
                    android:text="@string/send"
                    android:textColor="@color/white"
                    android:textSize="14sp" />
            </RelativeLayout>
        </RelativeLayout>
    </RelativeLayout>
</RelativeLayout>

